--- a/index.html
+++ b/index.html
@@ -32,8 +32,17 @@
             <div class="col-md-6 col-sm-12">
                 Game
                 <div class="row">
-                    <div class="col-6">User guess</div>
-                    <div class="col-6">Opponent Guess</div>
+                    <div class="col-6">
+                        <h4>User Guess</h4>
+                        <button class='btn btn-info' id='rock'>Rock</button>
+                        <br />
+                        <button class='btn btn-info' id='paper'>Paper</button>
+                        <br />
+                        <button class='btn btn-info' id='scissors'>Scissors</button>
+                    </div>
+                    <div class="col-6">
+                        <h4>Opponent Guess</h4>
+                    </div>
                 </div>
             </div>
             <div class="col-md-6 col-sm-12">
