adding more logic to determine who wins each round and updating the database

--- a/index.html
+++ b/index.html
@@ -32,16 +32,17 @@
             <div class="col-md-6 col-sm-12">
                 Game
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-6 guess-buttons" >
                         <h4>User Guess</h4>
-                        <button class='btn btn-info' id='rock'>Rock</button>
+                        <button class='btn btn-info btn-guess' id='rock'>Rock</button>
                         <br />
-                        <button class='btn btn-info' id='paper'>Paper</button>
+                        <button class='btn btn-info btn-guess' id='paper'>Paper</button>
                         <br />
-                        <button class='btn btn-info' id='scissors'>Scissors</button>
+                        <button class='btn btn-info btn-guess' id='scissors'>Scissors</button>
                     </div>
                     <div class="col-6">
                         <h4>Opponent Guess</h4>
+                        <p id='opponent-guess'></p>
                     </div>
                 </div>
             </div>
