--- a/index.html
+++ b/index.html
@@ -39,35 +39,42 @@
                 </div>
 
             </div>
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-2 col-sm-12">
                 <button id='join-game' class='btn btn-success'>Join Game</button>
-                <!-- <br /> -->
+            </div>
+            <div class="col-md-2 col-sm-12">
                 <button id='create-game' class='btn btn-primary'>Create Game</button>
+            </div>
+            <div class="col-md-2 col-sm-12">
                 <button id='delete-game' class='btn btn-danger'>Delete Game</button>
             </div>
         </div>
         <!-- <hr> -->
         <div class="row" id='game-board' style='display:none;'>
             <div class="col-md-6 col-sm-12">
-                <div class="row row-guess">
-                    <div class="col-12">
-                        <div class="guess-buttons">
-                            Select your move:
-                            <img class='btn-guess' data-name='rock' src='assets/images/rock.jpg'>
-                            <img class='btn-guess' data-name='paper' src='assets/images/paper.jpg'>
-                            <img class='btn-guess' data-name='scissors' src='assets/images/scissors.jpg'>
-                        </div>
-                        <div class="row">
-                            <div class="col-6" id='my-guess' style=''>
-                                <h4>Your Guess</h4>
-                                <p id="my-guess-img"></p>
+                <div class="row row-guess guess-buttons">
+                    <div class="col-md-3 col-sm-12">
+                        Select your move:
+                    </div>
+                    <div class="col-md-3 col-sm-3">
+                        <img class='btn-guess' data-name='rock' src='assets/images/rock.jpg'>
+                    </div>
+                    <div class="col-md-3 col-sm-3">
+                        <img class='btn-guess' data-name='paper' src='assets/images/paper.jpg'>
+                    </div>
+                    <div class="col-md-3 col-sm-3">
+                        <img class='btn-guess' data-name='scissors' src='assets/images/scissors.jpg'>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6" id='my-guess' style=''>
+                        <h4>Your Guess</h4>
+                        <p id="my-guess-img"></p>
 
-                            </div>
-                            <div class="col-6" id='opponent-guess' style=''>
-                                <h4>Opponent Guess</h4>
-                                <p id='opponent-guess-img'></p>
-                            </div>
-                        </div>
+                    </div>
+                    <div class="col-6" id='opponent-guess' style=''>
+                        <h4>Opponent Guess</h4>
+                        <p id='opponent-guess-img'></p>
                     </div>
                 </div>
                 <div class="row row-results">
@@ -84,7 +91,7 @@
                 <div id="messages">
                     <p style='color:gray;'>Here is the beginning of your chat!</p>
                 </div>
-                <form class='form-inline' >
+                <form class='form-inline'>
                     <input type='text' class='form-control' id='new-message' placeholder='Chat here...' style='width:80%;'>
                     <button id='add-message' class='form-control' style='width:20%;'>Send!</button>
 
