finished making the site mobile responsive

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
                     <div class="col-sm-9">
                         <input type="text" id="username" class="form-control">
                     </div>
-                </div>
+                </div> 
 
             </div>
-            <div class="col-md-2 col-sm-12">
+            <div class="col-md-2 col-sm-12 text-center my-2">
                 <button id='join-game' class='btn btn-success'>Join Game</button>
             </div>
-            <div class="col-md-2 col-sm-12">
+            <div class="col-md-2 col-sm-12 text-center my-2">
                 <button id='create-game' class='btn btn-primary'>Create Game</button>
             </div>
-            <div class="col-md-2 col-sm-12">
+            <div class="col-md-2 col-sm-12 text-center my-2">
                 <button id='delete-game' class='btn btn-danger'>Delete Game</button>
             </div>
         </div>
@@ -53,16 +53,16 @@
         <div class="row" id='game-board' style='display:none;'>
             <div class="col-md-6 col-sm-12">
                 <div class="row row-guess guess-buttons">
-                    <div class="col-md-3 col-sm-12">
+                    <div class="col-md-3 col-sm-12 text-center">
                         Select your move:
                     </div>
-                    <div class="col-md-3 col-sm-3">
+                    <div class="col-md-3 col-sm-3 text-center">
                         <img class='btn-guess' data-name='rock' src='assets/images/rock.jpg'>
                     </div>
-                    <div class="col-md-3 col-sm-3">
+                    <div class="col-md-3 col-sm-3 text-center">
                         <img class='btn-guess' data-name='paper' src='assets/images/paper.jpg'>
                     </div>
-                    <div class="col-md-3 col-sm-3">
+                    <div class="col-md-3 col-sm-3 text-center">
                         <img class='btn-guess' data-name='scissors' src='assets/images/scissors.jpg'>
                     </div>
                 </div>
